Handles ClientRequest get all, get by Id,insert update and delete